# ot-harjoitustyo

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  monopoli1.md
src/: index.py
src/datamanager/: filemanager.py  load_user_data.py  save_user_data.py
src/entities/: flight.py  flightplan.py  plane.py  user.py
src/tests/datamanager/: filemanager_test.py
src/tests/entities/: test_user.py
src/ui/: ui.py  ui_login_view.py  ui_user_homeview.py  ui_user_info.py  ui_user_newflight.py  ui_user_newflightplan.py  ui_user_newplane.py
