[tool.poetry]
name = "python-flightsim-flightlogs"
version = "0.1.0"
description = ""
authors = ["Chyrion <laine.vili@gmail.com>"]
readme = "README.md"
packages = [{include = "python_flightsim_flightlogs"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
coverage = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
